Initial setup to support previewing

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,5 +13,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script>
+      window.prismic = {
+        endpoint: 'https://leftoverbytes.prismic.io/api/v2'
+      };
+    </script>
+    <script type="text/javascript" src="//static.cdn.prismic.io/prismic.min.js"></script>
   </body>
 </html>
